# Vorlesung2016

./: LICENSE  README.md
Beispiele/: animatedGUI.hs  staticGUI.hs
Folien/: MeanStd.dump-simpl  eventrate.prof
Übungen/: Blatt1.hs  Blatt1.lhs  Blatt1.md  Blatt1.solution.hs  Blatt2.hs  Blatt2.lhs  Blatt2.md  Blatt2.solution.hs  Blatt3.hs  Blatt3.lhs  Blatt3.md  Blatt3.solution.hs  Blatt4.md  Blatt5.md  Projekte.md
Übungen/Blatt4_data/: CSV_Dummy_hard.csv  CSV_Dummy_problematic.csv  CSV_Dummy_simple.csv
Übungen/Blatt5-solution/: Blatt5-solution.cabal  stack.yaml
Übungen/Blatt5-solution/app/: Main-Animated.hs  Main-Static.hs
Übungen/Blatt5-solution/src/: GUI.hs  Parser.hs  Types.hs
Übungen/Blatt5_data/: time_ip.csv
