name:                Blatt5-solution
version:             0.1.0.0
synopsis:            Solution for Sheet 5 of our course FFPiHaskell (2016)
description:         Please see README.md
homepage:            https://github.com/ffpihaskell/Vorlesung2016
license:             BSD3
license-file:        LICENSE
author:              Stefan Dresselhaus
maintainer:          sdressel@techfak.uni-bielefeld.de
copyright:           2016 Stefan Dresselhaus
category:            GUI
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Parser
                     , GUI
                     , Types
  build-depends:       base >= 4.7 && < 5
                     , attoparsec
                     , bytestring
                     , gloss
                     , time
                     , array
  default-language:    Haskell2010

executable Blatt5-static
  hs-source-dirs:      app
  main-is:             Main-Static.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , Blatt5-solution
                     , gloss
                     , bytestring
                     , array
                     , time
  default-language:    Haskell2010

executable Blatt5-animated
  hs-source-dirs:      app
  main-is:             Main-Animated.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , Blatt5-solution
                     , gloss
                     , bytestring
                     , array
                     , time
  default-language:    Haskell2010

test-suite Blatt5-solution-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , Blatt5-solution
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/ffpihaskell/Vorlesung2016
